# zed-spec-kit

./: .gitignore  README.md
spec-kit/: Cargo.toml  extension.toml
spec-kit/assets/commands/: context.toml
spec-kit/assets/templates/: context-template.md
spec-kit/src/: command.rs  error.rs  handler.rs  lib.rs  main.rs
spec-kit/tests/integration/: commands.rs
spec-kit/tests/unit/: command_loader.rs
